Crud of admins with tokens validation

--- a/src/module/admin/views/edit.html
+++ b/src/module/admin/views/edit.html
@@ -5,7 +5,7 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>Create Administrator</h1>
+          <h1>Edit Administrator</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
@@ -15,7 +15,7 @@
             <li class="breadcrumb-item">
               <a href="/admin/administrators">Administrator Management</a>
             </li>
-            <li class="breadcrumb-item active">Create</li>
+            <li class="breadcrumb-item active">Edit</li>
           </ol>
         </div>
       </div>
@@ -30,7 +30,7 @@
       <div class="col-lg-7">
         <div class="card">
           <div class="card-header">
-            <h3 class="card-title">Create Administrator</h3>
+            <h3 class="card-title">Editing {{admin.fullName}} administrator (ID: {{admin.id}})</h3>
           </div>
           {% include "./layouts/form.html" %}
         </div>
