--- a/src/module/admin/views/index.html
+++ b/src/module/admin/views/index.html
@@ -5,14 +5,14 @@
     <div class="container-fluid">
       <div class="row mb-2">
         <div class="col-sm-6">
-          <h1>Create Administrator</h1>
+          <h1>Administrator Management</h1>
         </div>
         <div class="col-sm-6">
           <ol class="breadcrumb float-sm-right">
             <li class="breadcrumb-item">
               <a href="#">Home</a>
             </li>
-            <li class="breadcrumb-item active">Create Administrator</li>
+            <li class="breadcrumb-item active">Administrator Management</li>
           </ol>
         </div>
       </div>
