--- a/src/module/views/layouts/base.html
+++ b/src/module/views/layouts/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/public/admin/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
         <link rel="stylesheet" href="/public/admin/adminlte/css/adminlte.min.css">
+        <link rel="stylesheet" href="/public/admin/sweetalert2/css/sweetalert2.min.css">
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     </head>
     <body class="hold-transition sidebar-mini">
@@ -25,6 +26,9 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <script src="/public/admin/adminlte/js/adminlte.min.js"></script>
+        <script src="/public/admin/js/adminindex.js"></script>
+        <script src="/public/admin/js/adminform.js"></script>
+        <script src="/public/admin/sweetalert2/js/sweetalert2.min.js"></script>
         {% block footerScripts %}{% endblock %}
         <!-- AdminLTE for demo purposes -->
         <script src="/public/admin/adminlte/js/demo.js"></script>
