--- a/src/module/admin/views/login.html
+++ b/src/module/admin/views/login.html
@@ -21,9 +21,9 @@
         <div class="card-body login-card-body">
           <p class="login-box-msg">Sign in to start your session</p>
 
-          <form action="../../index3.html" method="post">
+          <form action="/admin/login" method="POST">
             <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Username" />
+              <input type="text" class="form-control" name="username" placeholder="Username" />
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-envelope"></span>
@@ -31,7 +31,7 @@
               </div>
             </div>
             <div class="input-group mb-3">
-              <input type="password" class="form-control" placeholder="Password" />
+              <input type="password" class="form-control" name="password" placeholder="Password" />
               <div class="input-group-append">
                 <div class="input-group-text">
                   <span class="fas fa-lock"></span>
@@ -41,7 +41,7 @@
             <div class="row">
               <div class="col-8">
                 <div class="icheck-primary">
-                  <input type="checkbox" id="remember" />
+                  <input type="checkbox" id="remember" name="remember" />
                   <label for="remember"> Remember Me </label>
                 </div>
               </div>
