--- a/src/module/views/layouts/sidebar.html
+++ b/src/module/views/layouts/sidebar.html
@@ -22,7 +22,7 @@
         />
       </div>
       <div class="info">
-        <a href="#" class="d-block">Alexis Toranzo</a>
+        <a href="#" class="d-block">{{admin.fullName}}</a>
       </div>
     </div>
 
