--- a/src/module/admin/views/login.html
+++ b/src/module/admin/views/login.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>AdminLTE 3 | Log in</title>
+    <title>e-Commerce Admin | Log in</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/public/admin/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="/public/admin/adminlte/css/adminlte.min.css">
+    <link rel="stylesheet" href="/public/admin/sweetalert2/css/sweetalert2.min.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
   </head>
   <body class="hold-transition login-page">
@@ -21,7 +22,7 @@
         <div class="card-body login-card-body">
           <p class="login-box-msg">Sign in to start your session</p>
 
-          <form action="/admin/login" method="POST">
+          <form action="/admin/login" method="POST" id="login-form">
             <div class="input-group mb-3">
               <input type="text" class="form-control" name="username" placeholder="Username" />
               <div class="input-group-append">
@@ -54,10 +55,7 @@
           </form>
 
           <p class="mb-1">
-            <a href="forgot-password.html">I forgot my password</a>
-          </p>
-          <p class="mb-0">
-            <a href="register.html" class="text-center">Register a new membership</a>
+            <a href="mailto:alexistoranzoar@gmail.com">I forgot my password</a>
           </p>
         </div>
         <!-- /.login-card-body -->
@@ -67,5 +65,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
     <script src="/public/admin/adminlte/js/adminlte.min.js"></script>
+    <script src="/public/admin/js/adminlogin.js"></script>
+    <script src="/public/admin/sweetalert2/js/sweetalert2.min.js"></script>
   </body>
 </html>
